course gap fix

--- a/src/pages/header/header2/header2B.module.css
+++ b/src/pages/header/header2/header2B.module.css
@@ -60,6 +60,7 @@
     left: 47%;
     padding-top: 10px;
     overflow-y: scroll;
+    z-index: 1;
 }
 .courseDropdown a{
     font-size: 14px;
@@ -105,6 +106,7 @@
     left: 57%;
     padding-top: 10px;
     overflow-y: scroll;
+    z-index: 1;
 }
 .cartDropdown p{
     font-size: 14px;
@@ -150,7 +152,8 @@
     border-radius: 2px;
     right: 28px;
     display: none;
-    top :50px
+    top :50px;
+    z-index: 1;
 }
 .topDiv{
     border-bottom: 1px solid #C4C4C4;
