--- a/src/pages/landing/components/browseCourses/browse.module.css
+++ b/src/pages/landing/components/browseCourses/browse.module.css
@@ -49,6 +49,7 @@
     justify-content: space-around;
     margin-top: 20px;
     position: relative;
+    gap: 20px;
 }
 
 
